tests/src/frontend/typechecking/invalid/cross_pattern_binding_4.sk
base class P() {
  children =
  | X
  | Y
}

base class MyOption {
  children =
  | XSome(X)
  | YSome(Y)
  | MyNone()
}

fun main(): void {
  o: MyOption = MyNone();
  o match {
  | XSome(x @ X())
  | YSome(x @ Y()) ->
    x match {
    | Y() -> void
    }
  | MyNone() -> void
  };
  print_string("Pass")
}
